[B]Version v1.0.0[/B]
- Initial version of XOZE.